--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Landy - Parallax App Landing Page</title>
+    <title>Ignition - A Car Maintenance App</title>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <!-- CSS 
         ================================================== -->
     <!-- Bootstrap 3-->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+  	<link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
     <!-- Template Styles -->
+    <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
+  	<!-- <link rel="stylesheet" href="css/main.css"> -->
     <link href="css/style.css" rel="stylesheet" media="screen">
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>	
       </head>
   <body>
 	  
@@ -21,25 +26,24 @@
 	  <nav class="navbar navbar-default" role="navigation">
 	  	  <div class="container">
 			  <div class="navbar-header">
-			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-			      <span class="sr-only">Toggle navigation</span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			    </button>
-			    
-			    <!--Replace text with your app name or logo image-->
-			    <a class="navbar-brand" href="#">Landy</a>
-			    
+			    <a class="navbar-brand logo" href="index.html">
+			    	<img id="logo" src="img/ignition_logotype_horiz.png" alt="Ignition">
+		    	</a>
 			  </div>
 			  <div class="collapse navbar-collapse navbar-ex1-collapse">
+			    <ul class="nav navbar-nav">
+			    	<li><a href="index.html">Home</a></li>
+			    	<li><a href="process.html">Process</a></li>
+			    </ul>
+		    </div>
+			  <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a onclick="$('header').animatescroll({padding:71});">Start</a></li>
 			      <li><a onclick="$('.detail').animatescroll({padding:71});">Screens</a></li>
 			      <li><a onclick="$('.features').animatescroll({padding:71});">Features</a></li>
 			      <li><a onclick="$('.social').animatescroll({padding:71});">Social	</a></li>
 			    </ul>
-			  </div>
+			  </div> -->
 		  </div>
 	  </nav>
 	  
