Update progressbar alignment

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 	<nav class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand logo" href="index.html" onclick="$('header').animatescroll({padding:71});">
+				<a class="navbar-brand" onclick="$('header').animatescroll({padding:71});">
 					<img id="logo" src="img/ignition_logotype_horiz.png" alt="Ignition">
 				</a>
-
+	
 				<nav class="progress-nav">
 					<ul>
 						<li><a onclick="$('#identify').animatescroll({padding:71});">Identify Problems</a></li>
@@ -44,24 +44,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-
 			</div>
+
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="process.html">Process</a></li>
 				</ul>
-				<!-- </div> -->
-<!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
-<ul class="nav navbar-nav">
-<li><a onclick="$('header').animatescroll({padding:71});">Start</a></li>
-<li><a onclick="$('.detail').animatescroll({padding:71});">Screens</a></li>
-<li><a onclick="$('.features').animatescroll({padding:71});">Features</a></li>
-<li><a onclick="$('.social').animatescroll({padding:71});">Social	</a></li>
-</ul>
-</div> -->
-</div>
-</nav>
+		</div>
+	</nav>
 
 
 <!-- HEADER
@@ -143,12 +134,12 @@
 		<div class="container">			
 			<div class="item">
 				<div class="row">
-					<div class="col-sm-12 col-md-offset-1 col-md-6">
+					<div class="col-sm-12 col-md-6 col-md-push-6 text-left">
 						<h1 id="find">Find Parts and Tools</h1>
 						<h3>Quickly diagnose the problem by OBDKey code or by inputting the symptom</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 					</div>
-					<div class="col-sm-12 col-md-5">
+					<div class="col-sm-12 col-md-offset-1 col-md-5 col-md-pull-6">
 						<div class="app-screenshot">
 							<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
 						</div>
@@ -191,7 +182,7 @@
 
 				<div class="col-md-3">
 					<div class="circle"><i class="icon-bookmark"></i></div>
-					<h2>Education</h2>
+					<h2>Educational</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				</div>
 
