added secondary features

--- a/index.html
+++ b/index.html
@@ -206,15 +206,25 @@
 <!-- SECONDARY FEATURES
 	================================================== -->
 	<section class="secondary-features">
-		<div class="container">
+		<div class="container ">
 			<div class="row">
-				<div class="col-md-12">
-					<h2>Secondary features</h2>
-					<p>Home screen (car profile, reminders, history, toolbox)See your progress at a glance
-						Get a quick summary of your latest fixes and money saved ever since using Ignition. Keep track of the history of your fixes and coming soon.Toolbox, History</p>
+				<h1>Secondary features</h1>
+					<p class="padding-side">Get a quick summary of your latest fixes and money saved ever since using Ignition. Keep track of the history of your fixes and coming soon.</p>
+				<div class="col-md-6 detail">					
+					<h2>See your progress at a glance</h2>
+					<div class="app-screenshot">
+						<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
 					</div>
-				</div>	  
-			</section>
+				</div>
+				<div class="col-md-6 detail">					
+					<h2>Toolbox, History</h2>
+					<div class="app-screenshot">
+						<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+					</div>
+				</div>
+			</div>	  
+		</div>
+	</section>
 
 
 <!-- SOCIAL
