revised the icon sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	<!-- Template Styles -->
 	<!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
 	<!-- <link rel="stylesheet" href="css/main.css"> -->
@@ -173,29 +175,25 @@
 	<section class="features design-discipline">
 		<div class="container">
 			<div class="row">
-
+				<h1 class="padding white">Our Design Principles</h1>
 				<div class="col-md-3">
-					<div class="circle"><i class="icon-check"></i></div>
+					<div class="circle"><i class="fa fa-fire"></i></div>
 					<h2>Motivational</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				</div>
 
 				<div class="col-md-3">
-					<div class="circle"><i class="icon-bookmark"></i></div>
+					<div class="circle"><i class="fa fa-car"></i></div>
 					<h2>Educational</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				</div>
 
 				<div class="col-md-3">
-					<div class="circle"><i class="icon-paper-plane"></i></div>
+					<div class="circle"><i class="fa fa-rocket"></i></div>
 					<h2>Fun</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				</div>
 
 				<div class="col-md-3">
-					<div class="circle"><i class="icon-like"></i></div>
+					<div class="circle"><i class="fa fa-thumbs-up"></i></div>
 					<h2>Confidence</h2>
-					<p>Blah so you can love doing it.</p>
 				</div>
 
 			</div>
