--- a/process.html
+++ b/process.html
@@ -57,31 +57,12 @@
 
 <!-- HEADER
 	================================================== -->     
-	<header>
+	<header class="process">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Hello World!</h1>
-					<p class="lead">This is an Awesome App Landing Page</p>
-
-					<div class="carousel-phone">
-						<div id="carousel-example-generic" class="carousel slide">
-
-							<!-- Wrapper for slides -->
-							<div class="carousel-inner">
-								<div class="item active">
-									<img src="img/screenshots/onboarding.jpg" alt="App Screen 1">
-								</div>
-								<div class="item">
-									<img src="img/screenshots/onboarding.jpg" alt="App Screen 2">
-								</div>
-								<div class="item">
-									<img src="img/screenshots/onboarding.jpg" alt="App Screen 3">
-								</div>
-
-							</div>
-						</div>
-					</div>
+					<h1>Process</h1>
+					<p class="lead">We'd love you how we design Inigtion</p>
 				</div>    
 			</div>    
 		</div>
