--- a/process.html
+++ b/process.html
@@ -73,15 +73,20 @@
 	================================================== -->
 	<section class="purchase">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-offset-2 col-md-8">
-					<h1>Everything's easily customizable.</h1>
-					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-					<!-- <button type="button" class="app-store"></button>   -->
+			<div class="row text-left">
+				<div class="col-md-offset-1 col-md-3">
+					<p>Year: 2015</p>		
+					<p>Domain: Car Maintenance</p>
+					<p>Project type: Interface design for a mobile app</p>
+				</div>
+				<div class="col-md-offset-1 col-md-7">
+					<p>Project Brief:</p>
+					<p>esearch, propose, design, prototype, evaluate and refine an interactive system designed for a specific domain and context.</p>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
 
 <!-- PAYOFF 
