Attempt to add scrollspy to progress bar

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	
 				<nav class="progress-nav">
 					<ul>
-						<li><a onclick="$('#identify').animatescroll({padding:71});">Identify Problems</a></li>
-						<li><a onclick="$('#find').animatescroll({padding:71});">Find Parts and Tools</a></li>
-						<li><a onclick="$('#fix').animatescroll({padding:71});">Fix it Yourself</a></li>
+						<li><a href="#identify" onclick="$('#identify').animatescroll({padding:71});">Identify Problems</a></li>
+						<li><a href="#find" onclick="$('#find').animatescroll({padding:71});">Find Parts and Tools</a></li>
+						<li><a href="#fix"  onclick="$('#fix').animatescroll({padding:71});">Fix it Yourself</a></li>
 					</ul>
 				</nav>
 
@@ -114,6 +114,7 @@
 
 <!-- DETAILS 
 	================================================== -->
+	<div class="detail-container">
 	<section class="detail">
 		<div class="container">			
 			<div class="item">
@@ -168,6 +169,7 @@
 			</div>
 		</div>
 	</section>
+	</div>
 
 
 <!-- FEATURES
@@ -282,6 +284,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/animatescroll.js"></script>
+	<script src="js/spy.js"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/retina.min.js"></script>
 
