--- a/process.html
+++ b/process.html
@@ -29,6 +29,23 @@
 				<a class="navbar-brand logo" href="index.html">
 					<img id="logo" src="img/ignition_logotype_horiz.png" alt="Ignition">
 				</a>
+				
+				<nav class="process-nav progress-nav">
+					<ul>
+						<li><a href="#brief"				onclick="$('#brief').animatescroll({padding:71});" 				data-toggle="tooltip" data-placement="bottom" title="Project Brief"></a></li>
+						<li><a href="#concept"			onclick="$('#concept').animatescroll({padding:71});" 			data-toggle="tooltip" data-placement="bottom" title="Concept"></a></li>
+						<li><a href="#research"			onclick="$('#research').animatescroll({padding:71});" 		data-toggle="tooltip" data-placement="bottom" title="Research"></a></li>
+						<li><a href="#wireframes"		onclick="$('#wireframes').animatescroll({padding:71});" 	data-toggle="tooltip" data-placement="bottom" title="Wireframes"></a></li>
+						<li><a href="#mockups"			onclick="$('#mockups').animatescroll({padding:71});" 			data-toggle="tooltip" data-placement="bottom" title="Mockups"></a></li>
+						<li><a href="#flowchart"		onclick="$('#flowchart').animatescroll({padding:71});" 		data-toggle="tooltip" data-placement="bottom" title="Interaction Flowchart"></a></li>
+						<li><a href="#prototype"		onclick="$('#prototype').animatescroll({padding:71});" 		data-toggle="tooltip" data-placement="bottom" title="Interactive Prototype"></a></li>
+						<li><a href="#testing"			onclick="$('#testing').animatescroll({padding:71});" 			data-toggle="tooltip" data-placement="bottom" title="User Testing"></a></li>
+						<li><a href="#refinements"	onclick="$('#refinements').animatescroll({padding:71});" 	data-toggle="tooltip" data-placement="bottom" title="Refinements"></a></li>
+						<li><a href="#future"				onclick="$('#future').animatescroll({padding:71});" 			data-toggle="tooltip" data-placement="bottom" title="Future Opportunities"></a></li>
+						<li><a href="#team"					onclick="$('#team').animatescroll({padding:71});" 				data-toggle="tooltip" data-placement="bottom" title="Our Team"></a></li>
+					</ul>
+				</nav>
+
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -356,6 +373,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/animatescroll.js"></script>
+	<script src="js/spy.js"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/retina.min.js"></script>
 
