--- a/process.html
+++ b/process.html
@@ -69,7 +69,7 @@
 	</header>
 
 
-<!-- PURCHASE
+<!-- Project brief 
 	================================================== -->
 	<section class="purchase">
 		<div class="container">
@@ -88,18 +88,42 @@
 	</section>
 
 
-
-<!-- PAYOFF 
+<!-- Why domain
 	================================================== -->
-	<section class="payoff">
+	<section class="domain">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
+				<h1>Why we chose the domain?</h1>
+				<div class="col-md-4 white">
+					<h3>many opportunities and pain points in the field of car maintenance</h3>
 				</div>
+				<div class="col-md-4">
+					<h3>no dominant technology for users new to the scene</h3>
+				</div>
+				<div class="col-md-4">
+					<h3>a unique domain that the team was interested in learning and tackling</h3>
+				</div>				
 			</div>
-		</div>      
+		</div>
 	</section>
+
+
+<!-- Who for
+	================================================== -->
+	<section class="persona padding-section">
+		<div class="container">
+			<div class="row">
+				<h1>Who is this for?</h1>
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<p>car owners who are curious or want to be experts in maintenance of their cars</p>
+					<img class="img-responsive shadow" src="img/persona.png">
+				</div>
+				<div class="col-md-2"></div>
+			</div>
+		</div>
+	</section>
+
 
 
 <!-- DETAILS 
