--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
+					<h1>Ignition provides concise instructions and encouragement to provide car owners with a learning experience that is not overwhelming.</h1>
 				</div>
 			</div>
 		</div>	  
