updated content on process

--- a/process.html
+++ b/process.html
@@ -124,6 +124,47 @@
 		</div>
 	</section>
 
+<!-- 
+	================================================== -->
+	<section class="why-design padding-section">
+		<div class="container">
+			<div class="row text-left">
+				<div class="col-md-4">
+					<h3>What are we making to solve this problem?</h3>
+					<p>a mobile app that allows users to identify car issues, find tools, and fix it themselves.</p>
+				</div>
+				<div class="col-md-4">
+					<h3>Why this approach?</h3>
+					<p>We are getting rid of this overwhelming process of the diagnostic system by making it more efficient and will help users to get motivated to fix small issues themselves, saving them money and gaining experience.</p>
+				</div>
+				<div class="col-md-4">
+					<h3>How are we approaching this problem?</h3>
+					<p>providing meaningful information to allow them to make informed decisions</p>
+					<p>Identify problems through OBDKey code or by inputting the symptom</p>
+					<p>suggest tools and parts and where to get them</p>
+					<p>easy to understand instructions with videos to accompany every step</p>
+					<p>tone and copy that encourages users that this issue can be done easily</p>
+
+				</div>
+				
+			</div>
+		</div>
+	</section>
+
+
+<!-- Research
+	================================================== -->
+	<section class="research padding-section">
+		<div class="container">
+			<div class="row">
+				<h1>Research</h1>
+			</div>
+		</div>
+	</section>
+
+		
+
+
 
 
 <!-- DETAILS 
