--- a/process.html
+++ b/process.html
@@ -162,6 +162,31 @@
 		</div>
 	</section>
 
+<!-- Research
+	================================================== -->
+	<section class="wireframe padding-section">
+		<div class="container">
+			<h1 class="padding">Wireframes</h1>
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+				</div>			
+			</div>
+			<div class="row padding">
+				<div class="col-sm-12 col-md-6">
+					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+				</div>			
+			</div>
+		</div>
+	</section>
 		
 
 
