Add line breaks to index text

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="process.html">Process</a></li>
 				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -89,9 +90,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-2 col-md-8">
-					<h1>We help car owners feel confident and in control when fixing their own cars.
+					<h1>We help car owners feel confident and <br>in control when fixing their own cars.
 					</h1>
-					<p class="lead">Ignition is an app that motivates car owners to diagnose car issues, find tools and parts in order to fix the issues themselves. </p>
+					<p class="lead">Ignition is an app that motivates car owners to diagnose car issues, <br>find tools and parts in order to fix the issues themselves. </p>
 					<!-- <button type="button" class="app-store"></button>	 -->
 				</div>
 			</div>
@@ -105,7 +106,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Ignition provides concise instructions and encouragement to provide car owners with a learning experience that is not overwhelming.</h1>
+					<h1>Ignition provides concise instructions and encouragement <br>to provide car owners with a learning experience <br>that is not overwhelming.</h1>
 				</div>
 			</div>
 		</div>	  
@@ -114,7 +115,6 @@
 
 <!-- DETAILS 
 	================================================== -->
-	<div class="detail-container">
 	<section class="detail">
 		<div class="container">			
 			<div class="item">
@@ -139,8 +139,8 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-md-push-6 text-left">
 						<h1 id="find">Find Parts and Tools</h1>
-						<h3>Quickly diagnose the problem by OBDKey code or by inputting the symptom</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<h3>Search for tools and parts needed to fix your car yourself</h3>
+						<p>Want to know the closest stores that carry the tools you need? Ignition helps find stores closest to you at the most affordable prices.</p>
 					</div>
 					<div class="col-sm-12 col-md-offset-1 col-md-5 col-md-pull-6">
 						<div class="app-screenshot">
@@ -157,8 +157,8 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-offset-1 col-md-6 text-left">
 						<h1 id="fix">Fix it Yourself</h1>
-						<h3>Quickly diagnose the problem by OBDKey code or by inputting the symptom</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<h3>Whether you are a curious beginner or a seasoned expert, we adapt the experience to your skill level.</h3>
+						<p>We keep instructions concise and understandable, accompanied with videos for every step. Intermediate and expert users can skip steps, whereas we make sure beginners can’t skip crucial steps.</p>
 					</div>
 					<div class="col-sm-12 col-md-5">
 						<div class="app-screenshot">
@@ -169,7 +169,6 @@
 			</div>
 		</div>
 	</section>
-	</div>
 
 
 <!-- FEATURES
@@ -209,7 +208,7 @@
 		<div class="container ">
 			<div class="row">
 				<h1>Secondary features</h1>
-					<p class="padding-side">Get a quick summary of your latest fixes and money saved ever since using Ignition. Keep track of the history of your fixes and coming soon.</p>
+					<p class="padding-side">Get a quick summary of your latest fixes and money saved ever since using Ignition. <br>Keep track of the history of your fixes and upcoming ones.</p>
 				<div class="col-md-6 detail">					
 					<h2>See your progress at a glance</h2>
 					<div class="app-screenshot">
