--- a/process.html
+++ b/process.html
@@ -11,7 +11,7 @@
 	<!-- Bootstrap 3-->
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<!-- Google Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
 	<!-- Template Styles -->
 	<!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
@@ -177,20 +177,20 @@
 			<h1 id="wireframe" class="padding">Wireframes</h1>
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
-					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
 
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
 				</div>			
 			</div>
 			<div class="row padding">
 				<div class="col-sm-12 col-md-6">
-					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
 
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<img src="img/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
 				</div>			
 			</div>
 		</div>
