Add video to index

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</div>
 					<div class="col-sm-5 col-md-5">
 						<div class="app-screenshot">
-							<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+							<video src="img/screenshots/identify.mp4" autoplay loop class="img-responsive" alt="">
 						</div>
 					</div>
 				</div>
@@ -144,7 +144,7 @@
 					</div>
 					<div class="col-sm-12 col-md-offset-1 col-md-5 col-md-pull-6">
 						<div class="app-screenshot">
-							<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+							<video src="img/screenshots/FindTools.mp4" autoplay loop class="img-responsive" alt="">
 						</div>
 					</div>
 				</div>
@@ -157,12 +157,13 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-offset-1 col-md-6 text-left">
 						<h1 id="fix">Fix it Yourself</h1>
-						<h3>Whether you are a curious beginner or a seasoned expert, we adapt the experience to your skill level.</h3>
+						<h3>Whether you are a curious <a class="skill active" id="beginner">beginner</a> or a seasoned <a class="skill" id="expert">expert</a>, we adapt the experience to your skill level.</h3>
 						<p>We keep instructions concise and understandable, accompanied with videos for every step. Intermediate and expert users can skip steps, whereas we make sure beginners can’t skip crucial steps.</p>
 					</div>
 					<div class="col-sm-12 col-md-5">
 						<div class="app-screenshot">
-							<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+							<video id="fix-beginner" src="img/screenshots/fix_beginner.mp4" autoplay loop class="img-responsive" alt=""></video>
+							<video class="hidden" id="fix-expert" src="img/screenshots/fix_expert.mp4" autoplay loop class="img-responsive" alt=""></video>
 						</div>
 					</div>
 				</div>
