Update secondary features

--- a/index.html
+++ b/index.html
@@ -212,14 +212,16 @@
 					<p class="padding-side">Get a quick summary of your latest fixes and money saved ever since using Ignition. <br>Keep track of the history of your fixes and upcoming ones.</p>
 				<div class="col-md-6 detail">					
 					<h2>See your progress at a glance</h2>
-					<div class="app-screenshot">
-						<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+					<div class="app-screenshot scroll">
+						<div class="scroll-inner">
+							<img src="img/screenshots/home.png" class="img-responsive">
+						</div>
 					</div>
 				</div>
-				<div class="col-md-6 detail">					
+				<div class="col-md-6 detail">				
 					<h2>Toolbox, History</h2>
 					<div class="app-screenshot">
-						<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
+						<img id="toolbox-history" src="img/screenshots/home-toolbox.png" class="img-responsive">
 					</div>
 				</div>
 			</div>	  
